Feat #9 - jwt 발급. 회원 테이블 생성 * 카카오 인증 후 jwt 와 함께 결과 return * user 모델 생성 * eslint 적용
