# src/routes/user.js
@@ -5,6 +5,6 @@ import ctrl from '../controllers/user.js';
 
 const router = express.Router();
 
-router.get('/kakao', ctrl.loginKakao);
+router.post('/kakao', ctrl.loginKakao);
 
 export default router;
